<resources>
    <string name="app_name">Tic Tac Two</string>
    <string name="ok">Ok</string>
    <string name="local_game">Local Game</string>
    <string name="remote_game">Remote Game</string>
    <string name="choose">Cpu or Human?</string>
    <string name="cpu_tv">Cpu </string>
    <string name="human">Human</string>
    <string name="cpu">Cpu : </string>
    <string name="player1">Player 1 : </string>
    <string name="player2">Player 2 : </string>
    <string name="empty_text"> </string>
    <string name="reset">Reset Game</string>
    <string name="home">Home</string>
    <string name="player1_marker">X</string>
    <string name="player2_marker">O</string>
    <string name="game_over">Game Over</string>
    <string name="player1_win">Player1 wins\!</string>
    <string name="player2_win">Player2 wins\!</string>
    <string name="opponent_win">Opponent wins\!</string>
    <string name="you_win">You win\!</string>
    <string name="cpu_win">Cpu wins\!</string>
    <string name="draw">It\'s a draw\!</string>
    <string name="rematch">Do you want to play again</string>
    <string name="exit">Exit</string>
    <string name="player1_win_rematch">Player1 wins\! Do you want to play again\?</string>
    <string name="cpu_win_rematch">Cpu wins\! Do you want to play again\?</string>
    <string name="player2_win_rematch">Player2 wins\! Do you want to play again\?</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="start_game">Start Game</string>
    <string name="empty_player_name">Please enter a valid player name</string>
    <string name="player_name">PlayerName</string>
    <string name="progress_dialog_message">Waiting for Opponent</string>
    <string name="connections">Connections</string>
    <string name="matching">Matching</string>
    <string name="waiting">Waiting</string>
    <string name="turns">Turns</string>
    <string name="turn">Turn</string>
    <string name="player1_cells">Player 1 Cells</string>
    <string name="player2_cells">Player 2 Cells</string>
    <string name="result">Result</string>
    <string name="won">Won</string>
    <string name="play_again">Play Again</string>
    <string name="moves">Moves</string>
</resources>